Fix board home header overflow and activity

--- a/src/assets/styles/cmps/_Board-sidebar.scss
+++ b/src/assets/styles/cmps/_Board-sidebar.scss
@@ -218,6 +218,7 @@
         color: #323338;
         box-shadow: none;
         display: contents;
+        margin-left: 0.25em;
     }
 
     .three-points:hover {
@@ -309,7 +310,7 @@
     .arrow-workspace {
         position: absolute;
         right: 4.5em;
-        top: 7.5em;
+        top: 7.9em;
     }
 
     .favorites {
