--- a/src/assets/styles/cmps/_boardhome.scss
+++ b/src/assets/styles/cmps/_boardhome.scss
@@ -14,7 +14,9 @@
 
         .welcome-user-container {
             font-family: Figtree;
-            font-weight: 400;   
+            font-weight: 400;
+            margin-left: 1em;
+            margin-top: 0.8em;
         }
 
 
@@ -41,27 +43,27 @@
             border: 1px solid $clr-border;
             padding: 5px;
             border-radius: 0.3em;
-            color: rgb(50,51,56);
+            color: rgb(50, 51, 56);
             cursor: pointer;
             transition: 0.2s;
 
             &:hover {
-                box-shadow: 0px 6px 20px rgba(0,0,0,0.2);
+                box-shadow: 0px 6px 20px rgba(0, 0, 0, 0.2);
                 border: 1px solid transparent;
                 text-decoration: none;
             }
 
-            .quick-search-item-image{
+            .quick-search-item-image {
                 max-height: 140px;
-                
+
             }
 
-            .board-home-card-title{
+            .board-home-card-title {
                 display: grid;
                 grid-auto-flow: column;
                 align-items: center;
                 width: max-content;
-                column-gap: 0.5em ;
+                column-gap: 0.5em;
                 font-size: 100%;
             }
         }
